# TCR-Embeddings

./: .env  .gitignore  README.md  TODO  checkdone.py  create-env.py  interpretability.ipynb  kfold-stats.ipynb  pyproject.toml  training-stats-combined.ipynb
.github/workflows/: ci.yml
analysis/: check-convergence.ipynb  interpretability-analysis.ipynb  kfold-stats.ipynb  training-stats-combined.ipynb
analysis-scripts/: interpretability.py  reconcilation.py
analysis/cache/: df_ratios.csv
cache/: df_pvalues.csv
configs/: make-configs.py
data/: Glossary.xlsx  create-kfold.py  full.tsv  sample.tsv  update_glossary.py
embed/: _embedder.py  create_random.py  download-tcrbert.py  llm.py  physicochemical.py  random.txt
embed/llm/: tcrbert.py
embed/physicochemical/: atchley.py  kidera.py  rand.py
embed/tessa/: tessa.py
interpretability-scripts/: interpretability.ipynb  interpretability.py  reconcilation.py
physicochemical/: aaprop.py  create_random.py
reduction/: autoencoder.py  jl-14_5.parquet  jl-64_5.parquet  jl-768_5.parquet  johnson_lindenstarauss.py  reduction.py
reduction/ae-transformations/: aaprop_decoder.pth  aaprop_encoder.pth  atchley_decoder.pth  atchley_encoder.pth  dimension-analysis.ipynb  ending-loss.txt  kidera_decoder.pth  kidera_encoder.pth  rand_decoder.pth  sceptr-tiny_decoder.pth  sceptr-tiny_encoder.pth  tcr-bert sceptr-default_decoder.pth  tcr-bert sceptr-default_encoder.pth  tcrbert_decoder.pth  tcrbert_encoder.pth
results/aaprop-autoencoder/kfold-0/: classifier-trained.pth  neg0-kfold.txt
results/aaprop-autoencoder/kfold-1/: classifier-trained.pth
results/aaprop-autoencoder/kfold-2/: classifier-trained.pth
results/aaprop-autoencoder/kfold-3/: classifier-trained.pth
results/aaprop-autoencoder/kfold-4/: classifier-trained.pth
results/aaprop-johnson-lindenstarauss/kfold-0/: classifier-trained.pth
results/aaprop-johnson-lindenstarauss/kfold-1/: classifier-trained.pth  pos0-kfold.txt
results/aaprop-johnson-lindenstarauss/kfold-2/: classifier-trained.pth
results/aaprop-johnson-lindenstarauss/kfold-3/: classifier-trained.pth
results/aaprop-no-reduction/kfold-2/: neg0-kfold.txt  (+1 more)
sshutils/: checkdone.py  run-repeats.py  zipper.py
tcr_embeddings/: constants.json  constants.py  pre-embed.py  resume.py  runtime_constants.py  test_constants.json  trainer.py
tcr_embeddings/configs/: make-configs.py
tcr_embeddings/embed/: _embedder.py  create_random.py  download-tcrbert.py  embedder.py  llm.py  physicochemical.py  random.txt
tcr_embeddings/interpret/: interpretability.py  reconcilation.py
tcr_embeddings/interpretability-scripts/: interpretability.py  reconcilation.py
tcr_embeddings/reduction/: autoencoder.py  reduction.py
tcr_embeddings/training/: dataloader.py  logger.py  models.py  resume.py  trainer.py  training_utils.py  utils.py
tcrbert/: tcrbert.py
tessa/: tessa.py
test/: __init__.py  revert-default-constants.py  temporarily-change-constants.py
test/embed/: test_llm.py  test_physicochemical.py
test/interpret/: test_interpretability.py
test/reduction/: test_autoencoder.py  test_johnson_lindenstarauss.py  test_no_reduce.py
test/training/: test_dataloader.py  test_training_utils.py
training/: dataloader.py  logger.py  models.py  resume.py  trainer.py
utils/: checkdone.py  create_env.py  interpretability.py  poetry_fill.py  run-repeats.py  zipper.py
utils/sshutils/: checkdone.py  zipper.py
(+41336 files in other folders)
