[tool.poetry]
name = "tcr-embeddings"
version = "0.0.1"
description = "Analysis of Expressivity of TCR Embeddings."
authors = ["Rudy Yuen <r.yuen.20@alumni.ucl.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blosum = "2.0.3"
contourpy = "1.3.1"
cycler = "0.12.1"
fonttools = "4.55.2"
fsspec = "2024.10.0"
joblib = "1.4.2"
kiwisolver = "1.4.7"
libtcrlm = "1.0.0.post1"
matplotlib = "3.9.3"
mkl-service = "2.4.0"
numpy = "1.26.4"
packaging = "24.2"
pandas = "2.2.3"
polars = "1.16.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
sceptr = "1.1.0.post1"
scikit-learn = "1.5.2"
scipy = "1.14.1"
seaborn = "0.13.2"
setuptools = "75.1.0"
six = "1.17.0"
sparsemax = "0.1.9"
sympy = "1.13.1"
threadpoolctl = "3.5.0"
tidytcells = "2.1.3.post1"
tqdm = "4.67.1"
tzdata = "2024.2"
wheel = "0.44.0"
jinja2 = "3.1.4"
markupsafe = "3.0.2"
mkl = "2025.0.1"
mpmath = "1.3.0"
networkx = "3.4.2"
pillow = "11.0.0"
tbb = "2022.0.0"
tcmlib = "1.2.0"
typing-extensions = "4.12.2"
umf = "0.9.1"
filelock = "3.16.1"
intel-cmplr-lib-ur = "2025.0.3"
intel-openmp = "2025.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
